--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,17 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_activity_detail">ActivityDetailActivity</string>
-    <string name="title_activity_volunteer">VolunteerActivity</string>
-    <string name="title_activity_device_manager">DeviceManagerActivity</string>
-    <string name="title_activity_device_detail">DeviceDetailActivity</string>
-    <string name="title_activity_binding_device">BindingDeviceActivity</string>
+    <string name="title_activity_activity_detail">活动详情</string>
+    <string name="title_activity_volunteer">义工名片</string>
+    <string name="title_activity_device_manager">设备管理</string>
+    <string name="title_activity_device_detail">设备详情</string>
+    <string name="title_activity_binding_device">绑定设备</string>
+    <string name="title_activity_video_manager">直播管理</string>
+    <string name="title_activity_login">登录</string>
+    <string name="title_activity_register">注册</string>
+    <string name="title_activity_forget_password">忘记密码</string>
 </resources>
